[gd_scene load_steps=6 format=3 uid="uid://ch1xafhtqyjh8"]

[ext_resource type="Script" uid="uid://bnd3ui4yeddsb" path="res://components/board_tile.gd" id="1_xwp66"]
[ext_resource type="SpriteFrames" uid="uid://ce4bgsfax57se" path="res://assets/sprite_frames/light_tile.tres" id="2_rpi1y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vho4"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3xd7"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44jb6"]
size = Vector2(16, 15)

[node name="BoardTile" type="Node2D" node_paths=PackedStringArray("TileCore", "TileVisual", "PieceSlot", "AnchorPoint")]
script = ExtResource("1_xwp66")
TileCore = NodePath("TileCore")
TileVisual = NodePath("TileCore/TileVisual")
PieceSlot = NodePath("TileCore/PieceSlot")
AnchorPoint = NodePath("AnchorPoint")

[node name="AnchorPoint" type="AnimatableBody2D" parent="."]
position = Vector2(0, -108)

[node name="CollisionPlaceholder" type="CollisionShape2D" parent="AnchorPoint"]
shape = SubResource("RectangleShape2D_4vho4")
disabled = true

[node name="GrooveJoint" type="GrooveJoint2D" parent="."]
position = Vector2(0, -108)
node_a = NodePath("../AnchorPoint")
node_b = NodePath("../LinkBody")
length = 100.0
initial_offset = 1.0

[node name="LinkBody" type="RigidBody2D" parent="."]
position = Vector2(0, -108)
mass = 0.8
gravity_scale = 0.8

[node name="CollisionPlaceholder" type="CollisionShape2D" parent="LinkBody"]
shape = SubResource("RectangleShape2D_k3xd7")
disabled = true

[node name="DampedSpringJoint" type="DampedSpringJoint2D" parent="."]
position = Vector2(0, -108)
node_a = NodePath("../LinkBody")
node_b = NodePath("../TileCore")
length = 65535.0
stiffness = 64.0

[node name="TileCore" type="RigidBody2D" parent="."]
position = Vector2(0, -108)
collision_mask = 0
input_pickable = true
mass = 0.8
gravity_scale = 0.8

[node name="InputCollider" type="CollisionShape2D" parent="TileCore"]
shape = SubResource("RectangleShape2D_44jb6")

[node name="TileVisual" type="AnimatedSprite2D" parent="TileCore"]
sprite_frames = ExtResource("2_rpi1y")

[node name="PieceSlot" type="Node2D" parent="TileCore"]

[connection signal="input_event" from="TileCore" to="." method="_on_tile_core_input_event"]
